Closed Bug 1665710 Opened 5 years ago Closed 5 years ago

Crash in CreateLoadingSessionHistoryEntryForLoad() in test_ext_webnavigation.html with SessionHistoryInParent

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Fission Milestone M6b
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- disabled
firefox82 --- disabled
firefox83 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

If you enable SessionHistoryInParent for fission, we crash in CreateLoadingSessionHistoryEntryForLoad() in test_ext_webnavigation.html, because the LoadId has been removed by a SendHistoryCommit() for an about:blank transient page.

Note: the patch for this uncovers a likely-pre-existing timeout bug

Severity: -- → S3
Priority: -- → P2

Comment on attachment 9176330 [details]
Bug 1665710: don't update session history for about:blank transient pages r=smaug

Revision D90589 was moved to bug 1665709. Setting attachment 9176330 [details] to obsolete.

Attachment #9176330 - Attachment is obsolete: true
Attachment #9176330 - Attachment is obsolete: false
Pushed by rjesup@wgate.com: https://hg.mozilla.org/integration/autoland/rev/10824c08d19f don't update session history for about:blank transient pages r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Crash Signature: [@ mozilla::dom::CanonicalBrowsingContext::CreateLoadingSessionHistoryEntryForLoad]
Blocks: 1673883
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: