Bug 1665710: don't update session history for about:blank transient pages r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D90589